# personal-ledger

./: .prettierignore  Cargo.toml  package.json  pnpm-lock.yaml  prettier.cjs  tailwind.config.cjs
assets/: main.css
src/: main.rs
templates/: another-page.html  base.html  hello.html  todo-form.html  todo-list.html
